--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -11,24 +11,23 @@
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="18" />
-        
+
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
- 
+
     <!-- Required to show current location -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
- 
+
     <!-- Required OpenGL ES 2.0. for Maps V2 -->
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
- 
 
     <application
         android:allowBackup="true"
@@ -44,10 +43,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-                <!-- Google API Key -->
+        <!-- Google API Key -->
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyAGA9E3tlQtVueYaliYHIC3Qkxya417DeE" />
+            android:value="AIzaSyBLM0gzXwidRqtCCI_cGgWkCTHXx7allR0" />
+
+        <activity
+            android:name="quique.proyecto.excercise.JsonActivity"
+            android:label="@string/title_activity_json" >
+        </activity>
     </application>
 
 </manifest>
