--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -19,7 +19,10 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+    
     <!-- Required to show current location -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -46,10 +49,18 @@
         <!-- Google API Key -->
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyBLM0gzXwidRqtCCI_cGgWkCTHXx7allR0" />
+            android:value="AIzaSyAGA9E3tlQtVueYaliYHIC3Qkxya417DeE" />
 
         <activity
             android:name="quique.proyecto.excercise.JsonActivity"
+            android:label="@string/title_activity_json" >
+        </activity>
+        <activity
+            android:name="quique.proyecto.excercise.cameraActivity"
+            android:label="@string/title_activity_json" >
+        </activity>
+        <activity
+            android:name="quique.proyecto.excercise.SensorTestActivity"
             android:label="@string/title_activity_json" >
         </activity>
     </application>
