--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -39,18 +39,21 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="quique.proyecto.excercise.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:screenOrientation="portrait">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
         <!-- Google API Key -->
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyAGA9E3tlQtVueYaliYHIC3Qkxya417DeE" />
-
+            android:value="AIzaSyBLM0gzXwidRqtCCI_cGgWkCTHXx7allR0" />
+        
         <activity
             android:name="quique.proyecto.excercise.JsonActivity"
             android:label="@string/title_activity_json" >
