--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -66,6 +66,19 @@
             android:name="quique.proyecto.excercise.SensorTestActivity"
             android:label="@string/title_activity_json" >
         </activity>
+                <activity
+            android:name="quique.proyecto.excercise.MagneticActivity"
+            android:label="@string/title_activity_magnetic">
+        </activity>
+                <activity
+            android:name="quique.proyecto.excercise.FinalResults"
+            android:label="@string/title_activity_final">
+        </activity>
+        <activity
+            android:name="quique.proyecto.excercise.Ball"
+            android:screenOrientation="portrait"
+            android:label="@string/title_activity_ball">
+        </activity>
     </application>
 
 </manifest>
